armando el storeDB

--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -80,7 +80,7 @@
                 <input
                   type="text"
                   id="bodega_id"
-                  name="bodega_id"
+                  name="bodega"
                   placeholder="Ej: Luigi Bosca"
                   class="form-input"
                   value="<%= locals.oldData ? oldData.bodega : null %>"
@@ -95,7 +95,7 @@
                 <input
                   type="text"
                   id="province_id"
-                  name="province_id"
+                  name="province"
                   placeholder="Ej: Mendoza"
                   class="form-input"
                   value="<%= locals.oldData ? oldData.provincia : null %>"
