mejoras en el crear y armado del update

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -21,7 +21,7 @@
     </div>
     <nav class="menu-desktop">
         <ul class="functions-header">
-            <a href="/clases"><li>Clases</li></a>
+            <a href="/products"><li>Productos</li></a>
             <a href="/bodegas"><li>Bodegas</li></a>
             <a href="/provincias"><li>Provincias</li></a>
             <a href="/novedades"><li>Novedades</li></a>
