--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -22,12 +22,18 @@
                 <p>Hola <%= user.userName %>!</p>
               </div>
             </div>
-            <div>
-              <a href="/users/editar-perfil"><button>Editar perfil</button></a>
-            </div>
+            <div class="contenedor-botones-perfil">
+              <div>
+                <a href="/users/editar-perfil"
+                  ><button class="botones-edit-logout">Editar perfil</button></a
+                >
+              </div>
 
-            <div>
-              <a href="/users/logout"><button>Cerrar Sesión</button></a>
+              <div>
+                <a href="/users/logout"
+                  ><button class="botones-edit-logout">Cerrar Sesión</button></a
+                >
+              </div>
             </div>
           </div>
 
