--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,30 +1,34 @@
-body{
-    display: flex;
-    flex-direction: column;
-    font-family: "Assistant", sans-serif;
+body {
+  display: flex;
+  flex-direction: column;
+  font-family: "Assistant", sans-serif;
 }
 
 .saludo {
-    font-size: 120px;
-    color:white;
-    background-color: purple;
-    text-align: center;
+  font-size: 120px;
+  color: white;
+  background-color: purple;
+  text-align: center;
 }
 
-.registro{
-    font-size: 25px;
-    color:black;
-    text-decoration: none;
+.registro {
+  font-size: 25px;
+  color: black;
+  text-decoration: none;
 }
 
-.login{
-    font-size: 25px;
-    color:black;
-    text-decoration: none;
+.login {
+  font-size: 25px;
+  color: black;
+  text-decoration: none;
 }
 
-.password{    
-    font-size: 25px;
-    color:black;
-    text-decoration: none;
+.password {
+  font-size: 25px;
+  color: black;
+  text-decoration: none;
+}
+
+.text-danger {
+  color: red;
 }
